turtleart.lessons.turtleart.Main.HouseMany.scala.error
Source:64: error: not found: value leveStylo
  leveStylo()
  ^Source:69: error: not found: value baisseStylo
  baisseStylo()
  ^